--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,15 @@
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
+	
+	<!-- oracle 설정 -->
+	<repositories>
+		<repository>
+			<id>codelds</id>
+			<url>http://code.lds.org/nexus/content/groups/main-repo</url>
+		</repository>
+	</repositories>
+	
 	<dependencies>
 		<!-- Spring -->
 		<dependency>
@@ -109,12 +118,33 @@
 			<version>1.2</version>
 		</dependency>
 		
-		<!-- MySQL -->
+		<!-- MySQL  
 		<dependency>
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
 		    <version>5.1.40</version>
 		</dependency>
+		-->
+		
+		<!-- Oracle6 -->
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>11.2.0.3</version>
+		</dependency>
+		<dependency> 
+            <groupId>commons-dbcp</groupId> 
+            <artifactId>commons-dbcp</artifactId> 
+            <version>1.4</version> 
+        </dependency>
+        
+        <!-- oracle14
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc14</artifactId>
+			<version>10.2.0.4.0</version>
+		</dependency>
+		-->
 		
 		<!-- JDBC -->
 		<dependency>
