--- a/pom.xml
+++ b/pom.xml
@@ -118,13 +118,12 @@
 			<version>1.2</version>
 		</dependency>
 		
-		<!-- MySQL  
+		<!-- MySQL -->
 		<dependency>
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
 		    <version>5.1.40</version>
 		</dependency>
-		-->
 		
 		<!-- Oracle6 -->
 		<dependency>
